--- a/project #1.html
+++ b/project #1.html
@@ -85,7 +85,9 @@
             </p>
           </div>
           <!-- news container close -->
-
+<div id="recent-panel">
+            
+          </div>
       </div>
       <!-- individual boxes close -->
 
