My site ready for deployment.

--- a/index.html
+++ b/index.html
@@ -31,10 +31,7 @@
 
     <div class="top-companies" id="left-bar">
     <h2 id="company-list-title">Top Companies</h2>
-    <ul class="company-list">
-      <li>SMG</li>
-      <li>GOOG</li>
-      <li>GWPH</li>
+    <ul id="company-list">
     </ul>
 
     <h2 id="recent-searches-title">Recent Searches</h2>
